<resources>

<!--    Common Strings-->
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="item_name">Item name</string>
    <string name="manufacturer">Manufacturer</string>

<!--    View Inventory Fragment-->
    <string name="app_name">Inventory App</string>
    <string name="view_inventory_fragment_name">Store Inventory</string>
    <string name="empty_inventory_view_tite">Your Inventory is Empty</string>
    <string name="empty_inventory_view_desc">Please click on add button below to add items to your inventory</string>
    <string name="add_button_text">Add</string>
    <string name="edit_button_text">Edit</string>
    <string name="network_status_offline_text">Offline</string>
    <string name="network_status_online_text">Online</string>

<!--    Search Inventory Fragment-->
    <string name="select_button_text">Select</string>
    <string name="search_inventory_fragment_name">Search SKUs</string>

<!--    Upload Inventory Fragment-->
    <string name="upload_inventory_fragment_name">Upload Inventory</string>
    <string name="search_button_text">Search</string>
    <string name="save_button_text">Save</string>
    <string name="unidentified_sku_dialog_title">This list has unidentified SKUs</string>
    <string name="unidentified_sku_dialog_message">Please click OK to save only Identified SKUs</string>
    <string name="unidentified_sku_positive_button_text">YES</string>
    <string name="unidentified_sku_negative_button_text">NO</string>
    <string name="hint_enter_sku_id">Enter SKU ID</string>
    <string name="hint_enter_qty">Enter Qty</string>

</resources>